syntax = "proto3";

package benchmark;

option go_package = "github.com/anirudhraja/protolite/benchmark/generated";

import "post.proto";

// Comprehensive User message demonstrating all protobuf features
message User {
  int32 id = 1;
  string name = 2;
  bool active = 4;
  UserStatus status = 5;
  UserType user_type = 6;

  // oneof contact_method - demonstrates union types
  oneof contact_method {
    string email = 10;
    string phone = 11;
    SocialMedia social_media = 12;
  }

  // Nested Address message with deeply nested Coordinates
  Address address = 7;

  // Multiple map types demonstrating different key/value combinations
  map<string, string> metadata = 8;           // map<string, string>
  map<string, int64> statistics = 9;          // map<string, int64>
  map<int32, string> preferences = 13;        // map<int32, string>
  map<string, UserProfile> profiles = 14;     // map<string, UserProfile>

  // Repeated nested notifications with oneof data
  repeated Notification notifications = 15;

  // Complex Posts with comprehensive features
  repeated Post posts = 16;

  int64 created_at = 17;
}

// Nested Address message with deep nesting
message Address {
  string street = 1;
  string city = 2;
  string state = 3;
  string country = 4;
  string postal_code = 5;
  AddressType type = 6;
  
  // Deeply nested Coordinates
  Coordinates coordinates = 7;
}

// Coordinates message (moved outside for better parsing)
message Coordinates {
  double latitude = 1;
  double longitude = 2;
  CoordinateSystem system = 3;
}

// Social Media contact info
message SocialMedia {
  string platform = 1;
  string username = 2;
  string profile_url = 3;
}

// User Profile for maps
message UserProfile {
  string display_name = 1;
  string bio = 2;
  string avatar_url = 3;
  ProfileVisibility visibility = 4;
  repeated string interests = 5;
}

// Notification with oneof data
message Notification {
  int32 id = 1;
  string title = 2;
  string message = 3;
  NotificationType type = 4;
  int64 timestamp = 5;
  bool read = 6;
  
  // oneof notification_data
  oneof notification_data {
    UserNotificationData user_data = 7;
    SystemNotificationData system_data = 8;
    PostNotificationData post_data = 9;
  }
}

// Notification data types
message UserNotificationData {
  int32 user_id = 1;
  string username = 2;
  string action = 3;
}

message SystemNotificationData {
  string system_message = 1;
  string action_url = 2;
  SystemPriority priority = 3;
}

message PostNotificationData {
  int32 post_id = 1;
  string post_title = 2;
  string action = 3;
}

// Comprehensive enums with unique prefixes to avoid conflicts
enum UserStatus {
  USER_UNKNOWN = 0;
  USER_ACTIVE = 1;
  USER_INACTIVE = 2;
  USER_SUSPENDED = 3;
  USER_DELETED = 4;
}

enum UserType {
  USER_TYPE_UNKNOWN = 0;
  USER_TYPE_PREMIUM = 1;
  USER_TYPE_BASIC = 2;
  USER_TYPE_ADMIN = 3;
  USER_TYPE_MODERATOR = 4;
}

enum AddressType {
  ADDRESS_UNKNOWN = 0;
  ADDRESS_HOME = 1;
  ADDRESS_WORK = 2;
  ADDRESS_BILLING = 3;
  ADDRESS_SHIPPING = 4;
}

enum CoordinateSystem {
  COORD_UNKNOWN = 0;
  COORD_WGS84 = 1;
  COORD_UTM = 2;
  COORD_MERCATOR = 3;
}

enum ProfileVisibility {
  PROFILE_UNKNOWN = 0;
  PROFILE_PUBLIC = 1;
  PROFILE_PRIVATE = 2;
  PROFILE_FRIENDS_ONLY = 3;
}

enum NotificationType {
  NOTIF_UNKNOWN = 0;
  NOTIF_MESSAGE = 1;
  NOTIF_COMMENT = 2;
  NOTIF_LIKE = 3;
  NOTIF_FOLLOW = 4;
  NOTIF_SOCIAL = 5;
  NOTIF_SYSTEM = 6;
}

enum SystemPriority {
  PRIORITY_UNKNOWN = 0;
  PRIORITY_LOW = 1;
  PRIORITY_MEDIUM = 2;
  PRIORITY_HIGH = 3;
  PRIORITY_CRITICAL = 4;
} 